--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "subscribe-data",
+  "name": "user-data-generator",
   "version": "1.0.0",
-  "description": "generator name and email",
+  "description": "create a file with user data",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -9,8 +9,8 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "export-to-csv": "^0.2.1",
-    "faker": "^5.5.3",
-    "nodemon": "^2.0.15"
+    "export-to-csv": "0.2.1",
+    "faker": "5.5.3",
+    "nodemon": "2.0.15"
   }
 }
